# api-gateway/api/handler/notification.go
@@ -1,10 +1,10 @@
 package handler
 
 import (
-	"github.com/gin-gonic/gin"
+	"github.com/dilshodforever/5-oyimtixon/api/middleware"
 	pb "github.com/dilshodforever/5-oyimtixon/genprotos/notifications"
+	"github.com/gin-gonic/gin"
 )
-
 
 // GetNotification handles retrieving a notification by user_id
 // @Summary      Get Notification
@@ -13,18 +13,14 @@ import (
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Param        id path string true "User ID"
 // @Success      200 {object} pb.GetNotificationByidResponse "Notification retrieved successfully"
 // @Failure      404 {string} string "Notification not found"
 // @Failure      500 {string} string "Error while retrieving notification"
-// @Router       /notification/{id} [get]
+// @Router       /notifications/get [get]
 func (h *Handler) GetNotification(ctx *gin.Context) {
 	var req pb.GetNotificationByidRequest
-	if err := ctx.ShouldBindUri(&req); err != nil {
-		ctx.JSON(400, gin.H{"error": "Invalid ID"})
-		return
-	}
-
+	id := middleware.GetUserId(ctx)
+	req.UserId = id
 	res, err := h.Notification.GetNotification(ctx, &req)
 	if err != nil {
 		ctx.JSON(500, gin.H{"error": err.Error()})
@@ -41,18 +37,14 @@ func (h *Handler) GetNotification(ctx *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Param        id path string true "User ID"
 // @Success      200 {object} pb.NotificationsResponse "Notification deleted successfully"
 // @Failure      404 {string} string "Notification not found"
 // @Failure      500 {string} string "Error while deleting notification"
-// @Router       /notification/{id} [delete]
+// @Router       /notifications/delete [delete]
 func (h *Handler) DeleteNotification(ctx *gin.Context) {
 	var req pb.GetNotificationByidRequest
-	if err := ctx.ShouldBindUri(&req); err != nil {
-		ctx.JSON(400, gin.H{"error": "Invalid ID"})
-		return
-	}
-
+	id:=middleware.GetUserId(ctx)
+	req.UserId=id
 	res, err := h.Notification.DeleteNotification(ctx, &req)
 	if err != nil {
 		ctx.JSON(500, gin.H{"error": err.Error()})
@@ -71,7 +63,7 @@ func (h *Handler) DeleteNotification(ctx *gin.Context) {
 // @Security     BearerAuth
 // @Success      200 {object} pb.ListNotificationResponse "List of notifications retrieved successfully"
 // @Failure      500 {string} string "Error while retrieving notifications"
-// @Router       /notifications [get]
+// @Router       /notifications/getlist [get]
 func (h *Handler) ListNotification(ctx *gin.Context) {
 	var req pb.Void
 
